--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,21 +2,37 @@ name: Metrics
 
 on:
   schedule:
-    - cron: "* * * * *"
-  workflow_dispatch: # Allows manual trigger
+    - cron: "* * * * *" # runs every hour
+  workflow_dispatch:
 
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Generate GitHub Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          filename: github-metrics.svg
           base: ""
           plugin_languages: yes
-          plugin_languages.indepth: yes
-          plugin_languages.recent: 1
-          plugin_languages.repos: 1000
-          plugin_languages.limit: 10
+          plugin_languages_indepth: yes
+          plugin_languages_analysis_timeout: 300
+          plugin_languages_threshold: 0%
+          plugin_languages_sections: most-used
+          plugin_languages_ignored: >-
+            JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML
+          plugin_languages_repos: 1000
+          plugin_languages_limit: 10
           repositories_affiliations: owner, collaborator, organization_member
+
+      - name: Commit and push metrics
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
+          git add github-metrics.svg
+          git commit -m "Update metrics" || echo "No changes to commit"
+          git push
