--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,38 +1,27 @@
 name: Metrics
-
 on:
-  schedule:
-    - cron: "0 8 * * *" # runs every hour
+  # Schedule updates (each hour)
+  schedule: [{cron: "44 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-
+  push: {branches: ["main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Generate GitHub Metrics
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: github-metrics.svg
-          base: ""
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 300
-          plugin_languages_threshold: 0%
-          plugin_languages_sections: most-used
-          plugin_languages_ignored: >-
-            JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML
-          plugin_languages_repos: 1000
-          plugin_languages_limit: 10
-          repositories_affiliations: owner, collaborator, organization_member
-
-      - name: Commit and push metrics
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
-          git add github-metrics.svg
-          git commit -m "Update metrics" || echo "No changes to commit"
-          git push
+          
+          # Enable languages-activity plugin
+          plugin_languages_activity: yes
+          plugin_languages_activity_types: code # Focus on actual code only
+          plugin_languages_activity_visibility: all # Check public repositories only
+          plugin_languages_activity_limit: 10 # Display up to 10 languages
+          plugin_languages_activity_days: 90 # Analyze activity over the last 90 days
+          
+          # Optional: Configure other general settings
+          config_timezone: Europe/Paris # e.g., Europe/Paris
+          config_order: languages-activity # Set plugin order if using multiple plugins
