--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,22 +14,14 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
-          # Enable languages-activity plugin
-          plugin_languages_activity: yes
-          plugin_languages_activity_types: code # Focus on actual code only
-          plugin_languages_activity_visibility: all # Check public repositories only
-          plugin_languages_activity_limit: 10 # Display up to 10 languages
-          plugin_languages_activity_days: 90 # Analyze activity over the last 90 days
-
           plugin_languages: yes
           plugin_languages_indepth: yes
 
-          plugin_languages_ignored: >-
-            JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML
+          plugin_languages_ignored: JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML
           plugin_languages_repos: 1000
-          plugin_languages_limit: 10
-          repositories_affiliations: owner, collaborator, organization_member
+          plugin_languages_limit: 8
+          plugin_languages_analysis_timeout: 60
+          plugin_languages_analysis_timeout_repositories: 15
           
           # Optional: Configure other general settings
           config_timezone: Europe/Zurich
