--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -23,6 +23,9 @@ jobs:
           plugin_languages_analysis_timeout: 60
           plugin_languages_analysis_timeout_repositories: 15
           plugin_languages_recent_days: 365
+          plugin_languages_details: lines
+          plugin_languages_categories: data, markup, programming, prose
+          plugin_languages_recent_categories: data, markup, programming, prose
           
           # Optional: Configure other general settings
           config_timezone: Europe/Zurich
