--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,6 +26,7 @@ jobs:
           plugin_languages_categories: data, markup, programming, prose
           plugin_languages_recent_categories: data, markup, programming, prose
           plugin_languages_other: Assembly:*.asm, Assembly:*.s, Assembly:*.S
+          commits_authoring: Julien Widmer, TrueJu, julien33widmer@gmail.com
           
           # Optional: Configure other general settings
           config_timezone: Europe/Zurich
