--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,7 +17,7 @@ jobs:
           plugin_languages: yes
           plugin_languages_indepth: yes
 
-          plugin_languages_ignored: JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML, TSX, JavaScript, GEDCOM, Shell, Dotenv, PowerShell
+          plugin_languages_ignored: JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML, TSX, JavaScript, GEDCOM, Shell, Dotenv, PowerShell, Gradle, XML Property List, Ignore List
           plugin_languages_repos: 1000
           plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 60
