--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,19 +12,29 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          
+          repositories_affiliations: owner, collaborator, organization_member
+          
+          config_timezone: Europe/Zurich
+          config_order: languages, base
+          
+          base: header
+          
           plugin_languages: yes
           plugin_languages_indepth: yes
-
+          
+          plugin_languages_sections: most-used
+          plugin_languages_details: bytes-size, percentage
+          
           plugin_languages_ignored: JSON, YAML, XML, Markdown, INI, TOML, Dockerfile, Makefile, Text, CSV, SVG, HTML, GEDCOM, Shell, Dotenv, PowerShell, Gradle, XML Property List, Ignore List
-          plugin_languages_repos: 1000
           plugin_languages_limit: 8
+          
           plugin_languages_analysis_timeout: 60
           plugin_languages_analysis_timeout_repositories: 15
+          
           plugin_languages_recent_days: 365
           plugin_languages_categories: data, markup, programming, prose
           plugin_languages_recent_categories: data, markup, programming, prose
-          commits_authoring: Julien Widmer, TrueJu, julien33widmer@gmail.com
           plugin_languages_threshold: 0%
           
-          config_timezone: Europe/Zurich
-          config_order: languages-activity
+          commits_authoring: Julien Widmer, TrueJu, julien33widmer@gmail.com, DEINE_FIRMEN_EMAIL@firma.com
